--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - "8000:80"
     volumes:
       - .:/var/www
-      - /var/www/vendor
+      - ./var/www/vendor
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
