--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
-      - ./var/www/vendor
+      - /var/www/vendor
     depends_on:
       - mariadb
     networks:
@@ -66,7 +66,7 @@ services:
       - "8000:80"
     volumes:
       - .:/var/www
-      - ./var/www/vendor
+      - /var/www/vendor
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
